--- a/css/style2.css
+++ b/css/style2.css
@@ -65,14 +65,14 @@ html {
     margin-bottom: 30px;
 }
 
-@media screen and (max-width: 600px) {
+@media (min-width: 600px) {
 #container-1 {
     background-color: #ff9eaf;
-    width: 425px;
+    width: 550px;
     box-shadow: 0 0 2rem #ff4da6;
     height: 970px;
     position: absolute;
-    left: 30px;
+    left: 240px;
     margin-top: 30px;
     border-radius: 10px;
     margin-bottom: 30px;
