--- a/css/style.css
+++ b/css/style.css
@@ -1,126 +1,119 @@
-p {
-    font-size: 25px;
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-style: wavy;
-    text-decoration-color: #ff8e81;
-    margin: 40px;
-    margin-right: 200px;
-    margin-left: 200px;
+html {
+    background-color: #ffa3b3;
 }
 
-h1 {
-    text-transform: capitalize;
-    text-align: center;
-    text-decoration: underline;
-    padding-top: auto;
-    text-decoration-color: pink ;
- }
+.titulo {
+    background-color: #ff7b91;
+    box-shadow: 0 0 2rem #ec479a;
+    padding: 0.5cm;
+    margin: 0;
+    height: 1cm;
+    width: 34.7cm;
+    border-bottom-left-radius: 1cm;
+    border-bottom-right-radius: 1cm;
+    
+}
 
-.toptitle {
-    text-align: center;
-    font-size: 40px;
-    background-color: #ff859a;
-    text-transform: capitalize;
-    padding: 10px;
- }
+a {
+    text-decoration: none;
+}
+
+#button {
+    position: absolute;
+    font-size: 0.8cm;
+    background-color: #ff7b91;
+    border: 0cm;
+    left: 34.1cm;
+}
+
+#button2 {
+    position: absolute;
+    left: 33cm;
+    font-size: 0.7cm;
+    background-color: #ff7b91;
+    border: 0cm;
+    
+}
 
 body {
     margin: 0;
-    text-transform: capitalize;
- }
-
-.imagem1 { 
-    position: absolute;
-    left: 195px;  
- }
-
-h2 {
-    text-align: center;
-    font-size: 30px;    
-    text-decoration: underline;
-    text-decoration-style: wavy;
-    text-decoration-color: #ff8e81 ;
-
- }
-
-html {
-    background-color: #ffa3b3;
- }
-
-.title-pag2 {
-    text-align: center;
-    font-size: 40px;
-    background-color: #ff9eaf;
-    text-transform: capitalize;
-    padding: 10px;
- }
-
-.coracao {
-   font-size: 70px;
-   text-align: center;
-
 }
 
-.bottom {
+.ela1 {
+    box-shadow:  0 0 2rem #ff4da6;
+    border-radius: 1cm;
     position: absolute;
-    font-size: 30px;
-    text-decoration: none;
-    left: 1310px;
+    left: 4.7cm;
+    width: 9cm;
 }
 
 #container-1 {
-    background-color: #ff9eaf;
-    width: 700px;
-    box-shadow: 0 0 2rem #ff4da6;
-    height: 1170px;
     position: absolute;
-    left: 350px;
-    margin-top: 30px;
-    border-radius: 10px;
+    top: 3cm;
+    width: 700px;
+    height: 27cm;
+    background-color:#ff9eaf;
+    border-radius: 2cm;
+    box-shadow:  0 0 2rem #ff4da6;
+    position: absolute;
+    left: 8.9cm;
 }
 
- @media (min-width: 600px) {
+p, h1, h2 {
+    text-align: center;
+    color: #7e1549;
+    font-family: 'Dancing Script', cursive;
 
+}
+
+p {
+    font-size: 25px;
+    margin: 1cm;
+    margin-left: 3cm;
+    margin-right: 3cm;
+    text-decoration: underline;
+    text-decoration-style: double;
+    text-decoration-color: #ff4da6;
+}
+
+@media (max-width: 600px) {
     #container-1 {
-        background-color: #ff9eaf;
-        width: 700px;
-        box-shadow: 0 0 2rem #ff4da6;
-        height: 1170px;
         position: absolute;
-        left: 150px;
-        margin-top: 30px;
-        border-radius: 10px;
-    }
-
-    .toptitle {
-        text-align: center;
-        font-size: 30px;
-        background-color: #ff859a;
-        text-transform: capitalize;
-        padding: 10px;
-    }
-
-    p {
-        font-size: 30px;
-        text-decoration: underline;
-        text-decoration-style: wavy;
-        text-decoration-color: #ff8e81;
-        margin: 30px;
-    }
-
-    .bottom {
+        top: 3cm;
+        width: 10cm;
+        height: 38cm;
+        background-color:#ff9eaf;
+        border-radius: 2cm;
+        box-shadow:  0 0 2rem #ff4da6;
         position: absolute;
-        top: 10px;
-        left: 940px;
-        font-size: 30px;
-        text-decoration: none;
+        left: 1.6cm;
     }
-
-    .imagem1 { 
+    
+    .ela1 {
+        box-shadow:  0 0 2rem #ff4da6;
+        border-radius: 1cm;
         position: absolute;
-        left: 90px;
-        margin-left: 100px;  
+        left: 2cm;
+        width: 6cm;
     }
 
+    .titulo {
+        background-color: #ff7b91;
+        box-shadow: 0 0 2rem #ec479a;
+        padding: 0.5cm;
+        margin: 0;
+        height: 1cm;
+        width: 11.75cm;
+        border-bottom-left-radius: 1cm;
+        border-bottom-right-radius: 1cm;
+    }
+
+    #button {
+        position: absolute;
+        font-size: 0.8cm;
+        background-color: #ff7b91;
+        border: 0cm;
+        left: 10.6cm;
+        
+    }
 }
